New Features added Feedback from courses
- student get to add feedback to courses

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,20 @@ services:
       - "5002:5002"
     networks:
       - microservices-net
+      
+  feedback:
+    build: ./feedback
+    container_name: feedback
+    environment:
+      DATABASE_URL: postgresql://student:password@student-db:5432/students
+      FLASK_ENV: development
+    depends_on:
+      - student-db
+    ports:
+      - "5003:5003"
+    networks:
+      - microservices-net
+
 
   admin-frontend:
     build: ./frontend
