new feature (enrolment and drop down menu)
- added new feature to prevent error (drop down menu for courses so students cannot leave a feedback or enrol into a non existing course)
_ new feature enrolment (enrol students to existing course)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,18 @@ services:
     networks:
       - microservices-net
 
+  enrolment-service:
+    build: ./enrolment
+    container_name: enrolment-service
+    environment:
+      DATABASE_URL: postgresql://student:password@student-db:5432/students
+      FLASK_ENV: development
+    depends_on:
+      - student-db
+    ports:
+      - "5004:5004"
+    networks:
+      - microservices-net
 
   admin-frontend:
     build: ./frontend
